Re-format source base Add prisma db push
